--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "scum-core",
   "dependencies": {
     "babel": "^5.2.15",
-    "rethinkdb": "^2.0.0"
+    "rethinkdb": "^2.0.0",
+    "thinky": "^2.0.5"
   },
   "scripts": {
     "test": "NODE_ENV=test node_modules/.bin/mocha"
